[package]
name = "plugin_metadata"
version = "0.1.0"
authors = ["Photos network developers <info@photos.network>"]
edition = "2021"

description = "Generate metadata based on the filename or exif information of a media item."
documentation = "https://developers.photos.network/"
readme = "README.md"

repository = "https://github.com/photos-network/plugin_metadata"

[lib]
crate-type = ["cdylib"]

[dependencies]
photos_network_plugin = { version = "0.2.0", path = "../plugin_interface" }
abi_stable = "0.11.1"
core_extensions = { version = "1.5.3", default_features = false, features = ["std"] }
